<resources>
    <string name="app_name">HIIT Workout 30 Day Abs</string>
    <string name="database">7MinWorkOutDB</string>
    <string name="Year">Y</string>
    <string name="Month">M</string>
    <string name="Day">D</string>
    <string name="title">Classic</string>
    <string name="explanation">Explanation</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="plan_select">SELECT PLAN</string>
    <string name="title_activity_scrolling">SELECT DAY</string>
    <string name="rounds">Rounds</string>
    <string name="days">Days</string>
    <string-array name="days_list">
        <item>Day 1</item>
        <item>Day 2</item>
        <item>Day 3</item>
        <item>Day 4</item>
        <item>Day 5</item>
        <item>Day 6</item>
        <item>Day 7</item>
        <item>Day 8</item>
        <item>Day 9</item>
        <item>Day 10</item>
        <item>Day 11</item>
        <item>Day 12</item>
        <item>Day 13</item>
        <item>Day 14</item>
        <item>Day 15</item>
        <item>Day 16</item>
        <item>Day 17</item>
        <item>Day 18</item>
        <item>Day 19</item>
        <item>Day 20</item>
        <item>Day 21</item>
        <item>Day 22</item>
        <item>Day 23</item>
        <item>Day 24</item>
        <item>Day 25</item>
        <item>Day 26</item>
        <item>Day 27</item>
        <item>Day 28</item>
        <item>Day 29</item>
        <item>Day 30</item>
    </string-array>
    <string-array name="count_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>
    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="npa" translatable="false">npa</string>
    <string name="hour" translatable="false">Hour</string>
    <string name="alarm" translatable="false">Alarm</string>
    <string name="minute" translatable="false">Minute</string>
    <string name="prefs" translatable="false">Preferences</string>
    <string name="channel_name" translatable="false">Channel</string>
    <string name="is_first_run" translatable="false">Is First Run</string>
    <string name="key_not_found" translatable="false">Key not found</string>
    <string name="channel_description" translatable="false">Description</string>
    <string name="publisher_id" translatable="false">pub-6412217023250030</string>
    <string name="house_ads" translatable="false">https://s3-us-west-2.amazonaws.com/thetaapps/houseAds/House+Ads.json</string>
    <string name="privacy_policy_url" translatable="false">https://docs.google.com/document/d/1-ZDXRqZfKHd_sWjgrmyLAqoBbGHzGFEYY4OEKhEA6hA/edit</string>
    <string name="app_id" translatable="false">ca-app-pub-2972677223588085~8301994603</string>
    <string name="native_ad_unit" translatable="false">ca-app-pub-6412217023250030/9137922994</string>
    <string name="banner_ad_unit" translatable="false">ca-app-pub-2972677223588085/7985874802</string>
    <string name="rewarded_ad_unit" translatable="false">ca-app-pub-6412217023250030/7633506345</string>
    <string name="exit_banner_ad_unit" translatable="false">ca-app-pub-2972677223588085/7985874802</string>
    <string name="interstitial_ad_unit" translatable="false">ca-app-pub-2972677223588085/8936419421</string>
    <string name="native_facebook" translatable="false">511255115963411_511255379296718</string>
    <string name="banner_facebook" translatable="false">511255115963411_511257882629801</string>
    <string name="interstitial_facebook" translatable="false">511255115963411_511258032629786</string>
    <string name="ko" translatable="false">한국어</string>
    <string name="ru" translatable="false">русский</string>
    <string name="es" translatable="false">Español</string>
    <string name="en" translatable="false">English</string>
    <string name="ar" translatable="false">العربية</string>
    <string name="de" translatable="false">Deutsche</string>
    <string name="language" translatable="false">Language</string>
    <string name="in" translatable="false">bahasa Indonesia</string>
    <string name="ad">AD</string>
    <string name="uhoh">Uh-oh…</string>
    <string name="cancel">Cancel</string>
    <string name="choose">Choose</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="no_thanks">No Thanks</string>
    <string name="tts_voice">TTS Voice</string>
    <string name="more_apps">More Apps</string>
    <string name="select_app">Select app</string>
    <string name="absolutely">Absolutely!</string>
    <string name="arrow_up">Arrow Up Icon</string>
    <string name="exit_app">Exit Application</string>
    <string name="design">By improving Design</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="select_language">Select Language</string>
    <string name="performance">By improving Performance</string>
    <string name="daily_notification">Daily Notification</string>
    <string name="type_your_feedback">Type your feedback…</string>
    <string name="personal_feedback">\nPersonal Feedback:\n</string>
    <string name="rating_dialog_header">Rating Dialog Header</string>
    <string name="functionality">By improving Functionality</string>
    <string name="notification_text">Come On Back! Six Pack Abs Of Your Dreams Await You!!!</string>
    <string name="improve_design">Need to improve the Design.\n</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="improve_performance">Need to improve the Performance.\n</string>
    <string name="provide_valid_feedback">Please provide a valid Feedback!</string>
    <string name="improve_functionality">Need to improve the Functionality.\n</string>
    <string name="how_can_we_improve">How can we improve the experience?</string>
    <string name="are_you_sure_to_exit">Are you sure you want to exit the application?</string>
    <string name="enjoy_our_app">Enjoying our app? If its helpful for you please spread the word by rating us!</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
</resources>